--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,63 @@
+appnope==0.1.3
 asgiref==3.5.2
+asttokens==2.0.7
+backcall==0.2.0
 black==22.8.0
 bleach==5.0.1
+certifi==2022.6.15
 click==8.1.3
+colorama==0.4.5
+cssbeautifier==1.14.6
+decorator==5.1.1
+distlib==0.3.6
+dj-database-url==0.5.0
 Django==4.1.1
 django-markdownify==0.9.2
 djhtml==1.5.2
+djlint==1.12.3
+EditorConfig==0.12.3
+eight-ball==3.0.3
+executing==0.9.1
+filelock==3.8.0
 flake8==5.0.4
+gunicorn==20.1.0
+html-tag-names==0.1.2
+html-void-elements==0.1.0
+importlib-metadata==4.12.0
+ipython==8.4.0
+jedi==0.18.1
+jsbeautifier==1.14.6
 Markdown==3.4.1
+matplotlib-inline==0.1.3
 mccabe==0.7.0
 mypy-extensions==0.4.3
+packaging==21.3
+parso==0.8.3
 pathspec==0.10.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pipenv==2022.8.24
 platformdirs==2.5.2
+prompt-toolkit==3.0.30
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pycodestyle==2.9.1
 pyflakes==2.5.0
+Pygments==2.12.0
+pyjokes==0.6.0
+pyparsing==3.0.7
+PyYAML==6.0
+regex==2022.8.17
 six==1.16.0
 sqlparse==0.4.2
+stack-data==0.3.0
 tinycss2==1.1.1
 tomli==2.0.1
+tqdm==4.64.1
+traitlets==5.3.0
+virtualenv==20.16.3
+virtualenv-clone==0.5.7
+wcwidth==0.2.5
 webencodings==0.5.1
+whitenoise==6.0.0
+zipp==3.8.1
